question navigation working