@@ -6,8 +6,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.naglabs.ezquizmaster.dto.OpenAiResponse;
 import com.naglabs.ezquizmaster.dto.Question;
 import com.naglabs.ezquizmaster.entity.UserSession;
-import com.naglabs.ezquizmaster.exception.LifelineAlreadyUsedException;
-import com.naglabs.ezquizmaster.exception.OpenAiResponseParseException;
 import com.naglabs.ezquizmaster.exception.UserSessionNotFoundException;
 import com.naglabs.ezquizmaster.repository.UserSessionRepository;
 import com.naglabs.ezquizmaster.util.PromptGenerator;
@@ -15,7 +13,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class QuizService {
@@ -30,151 +28,87 @@ public class QuizService {
     public String startQuiz(String email) throws Exception {
         // Fetch and parse questions
         String prompt = PromptGenerator.getPrompt(); // use earlier prompt
-        openAiService.generateQuestions(prompt);
-       // String content = response.getChoices().get(0).message.content;
-        List<Question> allQuestions = new ArrayList<>();//objectMapper.readValue(response.getChoices().get(0)), new TypeReference<>() {
-        //});
+        OpenAiResponse openAiResponse = openAiService.generateQuestionsLocal(prompt);
+        String content = openAiResponse.getChoices().getFirst().getMessage().getContent();
+        List<Question> allQuestionsAI = objectMapper.readValue(content, new TypeReference<>() {
+        });
 
-        // Group by difficulty
-        Map<String, List<Question>> grouped = allQuestions.stream()
-                .collect(Collectors.groupingBy(Question::getDifficulty));
+        List<Question> orderedQstnList = Stream.of("easy", "medium", "hard", "evil").flatMap(difficulty -> allQuestionsAI.stream().filter(e -> e.getDifficultyLevel().equals(difficulty))).toList();
 
-        // Separate primary & alternate
-        List<Question> alternate = new ArrayList<>();
-        List<Question> primary = new ArrayList<>();
-        for (List<Question> group : grouped.values()) {
-            alternate.add(group.get(group.size() - 1));
-            primary.addAll(group.subList(0, group.size() - 1));
+        Map<String, Question> lifeLineAlternateMap = new LinkedHashMap<>();
+        Map<Integer, Question> uiDisplayQuestionMap = new LinkedHashMap<>();
+
+        // Add easy
+        List<Question> uiDisplayQuestionList = new ArrayList<>(orderedQstnList.subList(0, 5));
+        Question altQuestion = orderedQstnList.get(5);
+        lifeLineAlternateMap.put(altQuestion.getDifficultyLevel(), altQuestion);
+
+        // Add medium
+        uiDisplayQuestionList.addAll(orderedQstnList.subList(6, 11));
+        altQuestion = orderedQstnList.get(11);
+        lifeLineAlternateMap.put(altQuestion.getDifficultyLevel(), altQuestion);
+
+        // Add hard
+        uiDisplayQuestionList.addAll(orderedQstnList.subList(12, 16));
+        altQuestion = orderedQstnList.get(16);
+        lifeLineAlternateMap.put(altQuestion.getDifficultyLevel(), altQuestion);
+
+        // Add evil
+        uiDisplayQuestionList.add(orderedQstnList.get(17));
+        altQuestion = orderedQstnList.get(18);
+        lifeLineAlternateMap.put(altQuestion.getDifficultyLevel(), altQuestion);
+
+        for (int i = 0; i <= uiDisplayQuestionList.size() - 1; i++) {
+            Question eachQuestion = uiDisplayQuestionList.get(i);
+            eachQuestion.setId(i);
+            uiDisplayQuestionMap.put(i + 1, eachQuestion);
         }
 
         // Save session
         UserSession session = new UserSession();
         session.setSessionId(UUID.randomUUID().toString());
         session.setUserEmail(email);
-        session.setPrimaryQuestionsJson(objectMapper.writeValueAsString(primary));
-        session.setAlternateQuestionsJson(objectMapper.writeValueAsString(alternate));
+        session.setCurrentQuestionIndex(1);
+        session.setScore(1);
+        session.setPrimaryQuestionsJson(objectMapper.writeValueAsString(uiDisplayQuestionMap));
+        session.setAlternateQuestionsJson(objectMapper.writeValueAsString(lifeLineAlternateMap));
         userSessionRepository.save(session);
 
         return session.getSessionId(); // return to frontend
     }
 
-    public Question getNextQuestion(String sessionId) throws Exception {
-        UserSession session = userSessionRepository.findById(sessionId)
-                .orElseThrow(() -> new UserSessionNotFoundException("Session ID not found: " + sessionId));
-
-
-        List<Question> primary = objectMapper.readValue(session.getPrimaryQuestionsJson(), new TypeReference<>() {
-        });
-        int index = session.getCurrentQuestionIndex();
-
-        if (index >= primary.size()) return null; // no more questions
-
-        return primary.get(index);
+    public Question getQuestion(String sessionId) throws JsonProcessingException {
+        Question firstQuestion = getQuestionFromSession(sessionId, false);
+        return Question.copyOnlyQstnAndOptions(firstQuestion);
     }
 
-    public boolean submitAnswer(String sessionId, String selectedOption) throws Exception {
-        UserSession session = userSessionRepository.findById(sessionId)
-                .orElseThrow(() -> new UserSessionNotFoundException("Session ID not found: " + sessionId));
-
-        List<Question> primary = objectMapper.readValue(session.getPrimaryQuestionsJson(), new TypeReference<>() {
+    public Question getQuestionFromSession(String sessionId, Boolean next) throws JsonProcessingException {
+        UserSession session = userSessionRepository.findById(sessionId).orElseThrow(() -> new UserSessionNotFoundException("Session ID not found: " + sessionId));
+        Map<Integer, Question> sessionOriginalQuestionMap = objectMapper.readValue(session.getPrimaryQuestionsJson(), new TypeReference<>() {
         });
 
-        int index = session.getCurrentQuestionIndex();
-        Question current = primary.get(index);
+        int qno = session.getCurrentQuestionIndex();
 
-        Boolean isRightAnswerChoosen = current.getCorrectAnswer().equalsIgnoreCase(selectedOption);
-
-        if (isRightAnswerChoosen) {
-            // Handle correct
+        if (next) {
+            qno += 1;
+            session.setCurrentQuestionIndex(qno);
             session.setScore(session.getScore() + 10);
-            session.setCurrentQuestionIndex(index + 1);
-            session.setUsedSecondChance(false);
-        } else if (session.isUsedSecondChance()) {
-            // Just consume the second chance
-            session.setUsedSecondChance(false); // Next wrong = game over
+            userSessionRepository.save(session); // Persist changes
+        }
+
+        return sessionOriginalQuestionMap.get(qno);
+    }
+
+    public Question submitAnswer(String sessionId, String selectedOption) throws Exception {
+        Question currentQuestion = getQuestionFromSession(sessionId, false);
+        boolean isRightAnswerChosen = currentQuestion.getCorrectOption().equalsIgnoreCase(selectedOption);
+        if (isRightAnswerChosen) {
+            Question nextQuestionFromSession = getQuestionFromSession(sessionId, true);
+            return Question.copyOnlyQstnAndOptions(nextQuestionFromSession);
         } else {
-            // Lose a life or game over
-            session.setRemainingLifelines(session.getRemainingLifelines() - 1);
+            //put custom expception WrongAnswerException
+            throw new IllegalArgumentException("Incorrect answer selected.");
         }
-
-        return isRightAnswerChoosen;
-    }
-
-    public Question useAlternateQuestion(String sessionId) {
-        UserSession session = userSessionRepository.findById(sessionId)
-                .orElseThrow(() -> new UserSessionNotFoundException("Session ID not found: " + sessionId));
-
-
-        if (session.isUsedAlternate()) {
-            throw new LifelineAlreadyUsedException("Alternate lifeline already used.");
-        }
-
-        List<Question> alternate;
-        List<Question> primary;
-        try {
-            alternate = objectMapper.readValue(session.getAlternateQuestionsJson(), new TypeReference<>() {
-            });
-            primary = objectMapper.readValue(session.getPrimaryQuestionsJson(), new TypeReference<>() {
-            });
-        } catch (JsonProcessingException e) {
-            throw new OpenAiResponseParseException("Failed to parse OpenAI response", e);
-        }
-
-        Question alternateQ = alternate.stream()
-                .filter(q -> q.getDifficulty().equalsIgnoreCase(primary.get(session.getCurrentQuestionIndex()).getDifficulty()))
-                .findFirst()
-                .orElseThrow();
-
-        session.setUsedAlternate(true);
-        userSessionRepository.save(session);
-        return alternateQ;
-    }
-
-    public List<String> useFiftyFifty(String sessionId) {
-        UserSession session = userSessionRepository.findById(sessionId)
-                .orElseThrow(() -> new UserSessionNotFoundException("Session ID not found: " + sessionId));
-
-
-        if (session.isUsedFiftyFifty()) throw new IllegalStateException("50-50 lifeline already used");
-
-        List<Question> primary;
-        try {
-            primary = objectMapper.readValue(session.getPrimaryQuestionsJson(), new TypeReference<>() {
-            });
-        } catch (JsonProcessingException e) {
-            throw new OpenAiResponseParseException("Failed to parse OpenAI response", e);
-        }
-        Question current = primary.get(session.getCurrentQuestionIndex());
-
-        List<String> options = new ArrayList<>(current.getOptions());
-
-        // Remove two incorrect answers
-        options.removeIf(opt -> !opt.equalsIgnoreCase(current.getCorrectAnswer()));
-        Random random = new Random();
-
-        while (options.size() < 2) {
-            String randomIncorrect = current.getOptions().get(random.nextInt(4));
-            if (!randomIncorrect.equalsIgnoreCase(current.getCorrectAnswer()) && !options.contains(randomIncorrect)) {
-                options.add(randomIncorrect);
-            }
-        }
-
-        session.setUsedFiftyFifty(true);
-        userSessionRepository.save(session);
-
-        return options;
-    }
-
-    public void useSecondChance(String sessionId) {
-        UserSession session = userSessionRepository.findById(sessionId)
-                .orElseThrow(() -> new UserSessionNotFoundException("Session ID not found: " + sessionId));
-
-
-        if (session.isUsedSecondChance()) throw new IllegalStateException("Second chance already used");
-
-        session.setUsedSecondChance(true);
-        session.setUsedSecondChance(true); // Will be reset after this question
-        userSessionRepository.save(session);
     }
 
 }
